cabal-version: 3.0
name: db-server
version: 0.1.0
synopsis:
  An HTTP server over ouroboros-consensus' database

license: Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright:
  2024 Cardano Foundation

author: Arnaud Bailly <arnaud@pankzsoft.com>
maintainer: Arnaud Bailly <arnaud@pankzsoft.com>
category: Network
build-type: Simple
extra-doc-files:
  README.md

source-repository head
  type: git
  location: https://github.com/pragma-org/db-server

common common-lib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wunused-packages
    -Wno-unticked-promoted-constructors

common common-test
  import: common-lib
  ghc-options:
    -threaded
    -rtsopts

common common-exe
  import: common-lib
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -I0 -A16m"

library
  import: common-lib
  hs-source-dirs: src
  exposed-modules:
    Cardano.Tools.DBServer

  build-depends:
    aeson,
    base >=4.14 && <4.21,
    base16-bytestring >=1.0,
    bytestring >=0.10 && <0.13,
    cardano-crypto,
    cardano-crypto-class,
    cardano-crypto-wrapper,
    cardano-git-rev ^>=0.2.1,
    cardano-ledger-allegra,
    cardano-ledger-alonzo,
    cardano-ledger-api,
    cardano-ledger-babbage,
    cardano-ledger-binary,
    cardano-ledger-byron,
    cardano-ledger-conway,
    cardano-ledger-core,
    cardano-ledger-mary,
    cardano-ledger-shelley,
    cardano-prelude,
    cardano-protocol-tpraos,
    cardano-slotting,
    cardano-strict-containers,
    cborg ^>=0.2.2,
    compact,
    containers >=0.5 && <0.8,
    contra-tracer,
    directory,
    filepath,
    fs-api,
    githash,
    http-types,
    microlens,
    mtl,
    network,
    network-mux,
    nothunks,
    ouroboros-consensus ,
    ouroboros-consensus-cardano,
    ouroboros-consensus-diffusion,
    ouroboros-consensus-protocol:unstable-protocol-testlib,
    ouroboros-consensus-cardano:unstable-cardano-tools,
    ouroboros-consensus-protocol,
    ouroboros-network,
    ouroboros-network-api,
    ouroboros-network-framework,
    ouroboros-network-protocols,
    resource-registry,
    serialise,
    singletons,
    sop-core,
    sop-extras,
    strict-sop-core,
    text,
    text-builder,
    time,
    transformers,
    transformers-except,
    wai,
    warp

executable db-server
  import: common-exe
  hs-source-dirs: app
  main-is: db-server.hs
  build-depends:
    base,
    contra-tracer,
    cardano-crypto-class,
    network,
    optparse-applicative,
    db-server,
    with-utf8,
  other-modules:
    DBServer.Options

test-suite db-server-test
  import: common-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    QuickCheck,
    aeson,
    base,
    hspec,
    text,
    db-server,
  build-tool-depends:
    hspec-discover:hspec-discover
