cabal-version: 3.0
name: db-server
version: 0.1.0
synopsis:
  An HTTP server over ouroboros-consensus' database

license: Apache-2.0
license-files:
  LICENSE

copyright:
  2024 Cardano Foundation

author: Arnaud Bailly <arnaud@pankzsoft.com>
maintainer: Arnaud Bailly <arnaud@pankzsoft.com>
category: Network
build-type: Simple
extra-doc-files:
  README.md

source-repository head
  type: git
  location: https://github.com/pragma-org/db-server

common common-lib
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wunused-packages
    -Wno-unticked-promoted-constructors

common common-test
  import: common-lib
  ghc-options:
    -threaded
    -rtsopts

common common-exe
  import: common-lib
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -I0 -A16m"

library
  import: common-lib
  hs-source-dirs: src
  exposed-modules:
    Cardano.Tools.DB
    Cardano.Tools.DBQuery
    Cardano.Tools.DBServer
    Cardano.Tools.DBServer.Options

  build-depends:
    aeson,
    base >=4.14 && <4.21,
    base16-bytestring >=1.0,
    bytestring >=0.10 && <0.13,
    cardano-crypto-class,
    cardano-ledger-api,
    cardano-ledger-binary,
    cardano-ledger-core,
    cardano-slotting,
    contra-tracer,
    http-types,
    network,
    optparse-applicative,
    ouroboros-consensus,
    ouroboros-consensus-cardano ^>= 0.26,
    ouroboros-consensus-diffusion,
    ouroboros-consensus-cardano:unstable-cardano-tools,
    ouroboros-network-api,
    resource-registry,
    QuickCheck,
    text,
    time,
    wai,
    warp

executable db-server
  import: common-exe
  hs-source-dirs: app
  main-is: db-server.hs
  build-depends:
    base,
    contra-tracer,
    cardano-crypto-class,
    optparse-applicative,
    db-server,
    with-utf8,


test-suite db-server-test
  import: common-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Cardano.Tools.DBQuerySpec
    Cardano.Tools.DBServerSpec
    Cardano.Tools.DBServer.OptionsSpec
    Cardano.Tools.TestHelper
  build-depends:
                QuickCheck,
                aeson,
                base,
                base16-bytestring >=1.0,
                bytestring,
                cardano-crypto-class,
                contra-tracer,
                db-server,
                directory,
                filepath,
                hspec,
                http-types,
                temporary,
                text,
                unix,
                wai,
                wai-extra,
                warp
  build-tool-depends:
    hspec-discover:hspec-discover
